--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,10 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
+# Ignore Mac DS_Store files
+.DS_Store
+**/.DS_Store
+
 # Code Injection
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
